--- a/DiageoMDMWeb/src/main/webapp/outlet/crearOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/crearOutlet.xhtml
@@ -33,12 +33,14 @@
                     <p:fieldset legend="#{msg.is_father}" style="width: 95%">
                         <h:panelGrid columns="4" style="width: 100%">
                             <h:outputLabel value="#{msg.is_father}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
-                            <p:selectBooleanCheckbox value="#{outletCrearBean.isFather}"/>
+                            <p:selectBooleanCheckbox value="#{outletCrearBean.isFather}">
+                                <p:ajax process="@this" update="formOutlet:acMinLength" listener="#{outletCrearBean.deleteOutletFather()}"/>
+                            </p:selectBooleanCheckbox>
                             <h:outputLabel value="#{msg.father}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
                             <p:autoComplete id="acMinLength" minQueryLength="4" value="#{outletCrearBean.father}" label="#{msg.father}"
                                             var="outletFather" itemLabel="#{outletFather.kiernanId}    #{outletFather.businessName}" itemValue="#{outletFather}" forceSelection="true"
                                             completeMethod="#{outletCrearBean.completeChainFather}" effect="fade" converter="outletConverter"
-                                            style="width: 90% !important;"/>
+                                            style="width: 90% !important;" disabled="#{outletCrearBean.isFather}" queryEvent="enter"/>
                         </h:panelGrid>
                     </p:fieldset>
                     <br/>
