--- a/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
@@ -70,8 +70,10 @@
 
                     <h:panelGroup id="pgCOnsultarOut">
                         <h:panelGroup id="pgCOnsultarOutHijo" rendered="#{!outletConsultarBean.verDetalle}">
-                            <p:commandButton value="Atrás" process="@this" update="@form" actionListener="#{outletConsultarBean.backOutlet()}" styleClass="button" style="left: 0%"/>
-                            <p:commandButton value="Siguiente" process="@this" update="@form" actionListener="#{outletConsultarBean.nextOutlet()}" styleClass="button" style="left: 0%"/>
+                            <!--
+                            <p:commandButton value="Atrás" process="@this" update="@form" actionListener="{outletConsultarBean.backOutlet()}" styleClass="button" style="left: 0%"/>
+                            <p:commandButton value="Siguiente" process="@this" update="@form" actionListener="{outletConsultarBean.nextOutlet()}" styleClass="button" style="left: 0%"/>
+                            -->
                             <br/>
                             <br/>
                             <p:fieldset legend="#{msg.is_father}" style="width: 95%">
